# postretro

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LEVEL_DESIGN.md  README.md
crates/entities/: Cargo.toml
crates/entities/src/: ctx.rs  data_registry.rs  engine_state_catalog.rs  ffi.rs  lib.rs  provenance.rs  registry.rs  slot_table.rs
crates/entities/src/components/: agent.rs  billboard_emitter.rs  brain.rs  fog_volume.rs  health.rs  light.rs  mesh.rs  mod.rs  particle.rs  player_movement.rs  sprite_visual.rs  weapon.rs
crates/entities/src/data_descriptors/: mod.rs
crates/entities/src/reactions/: system_commands.rs
crates/entities/src/scripting/: error.rs
crates/foundation/: Cargo.toml
crates/foundation/src/: foundation_pods.rs  lib.rs  value_types.rs
crates/foundation/src/data_descriptors/: error.rs  mod.rs
crates/foundation/src/ir/: bind.rs  eval.rs  load.rs  mod.rs  scope.rs  test_scope.rs
crates/foundation/src/movement/: mod.rs  player_movement.rs  scope.rs
crates/level-compiler/: Cargo.toml
crates/level-compiler/src/: affinity_grid.rs  animated_light_chunks.rs  animated_light_weight_maps.rs  bc5.rs  bc6h.rs  bvh_build.rs  cache.rs  cell_draw_index_bake.rs  chart_raster.rs  chunk_light_list_bake.rs  delta_sh_bake.rs  direct_sh_bake.rs  fixture_pipeline.rs  fog_cell_masks.rs  geometry.rs  geometry_utils.rs  light_namespaces.rs  lightmap_bake.rs  lightmap_layer.rs  main.rs  map_data.rs  navmesh_bake.rs  pack.rs  pack_sections.rs  parse.rs  partition.rs  portals.rs  sdf_bake.rs  sh_bake.rs  sh_group.rs  texture_mips.rs
crates/level-compiler/src/format/: mod.rs  quake_map.rs
crates/level-compiler/src/partition/: brush_bsp.rs  bsp.rs  face_extract.rs  types.rs
crates/level-compiler/src/visibility/: mod.rs
crates/level-compiler/tests/: animated_weight_maps_fixtures.rs
crates/level-format/: Cargo.toml
crates/level-format/benches/: fog_cull_bench.rs
crates/level-format/src/: alpha_lights.rs  animated_light_chunks.rs  animated_light_weight_maps.rs  bsp.rs  bvh.rs  cell_draw_index.rs  cell_locator.rs  cells.rs  chunk_light_list.rs  data_script.rs  delta_sh_volumes.rs  direct_sh_volume.rs  fog_cell_masks.rs  fog_volumes.rs  geometry.rs  gltf_resolve.rs  lib.rs  light_influence.rs  light_tags.rs  lightmap.rs  map_entity.rs  navmesh.rs  octahedral.rs  portals.rs  prm.rs  sdf_atlas.rs  sh_volume.rs  texture_cache_keys.rs  texture_names.rs
crates/level-loader/: Cargo.toml
crates/level-loader/src/: lib.rs  prl.rs  prl_loader.rs
crates/lighting/: Cargo.toml
crates/lighting/src/: influence.rs  lib.rs  script_primitives.rs  spec_buffer.rs
crates/model/: Cargo.toml
crates/model/src/: anim.rs  gltf_loader.rs  lib.rs  mesh.rs  sample_params.rs  skeleton.rs
crates/net/: Cargo.toml
crates/net/src/: harness.rs  lib.rs  replication.rs  slots.rs  state_replication.rs  state_slots.rs  timesync.rs  transport.rs  wire.rs
crates/postretro/: Cargo.toml  build.rs
crates/postretro/sdk/types/: postretro.d.ts
crates/postretro/src/: agent_steering.rs  alloc_probe.rs  camera.rs  candidate_cull.rs  candidate_cull_mirror.rs  candidate_cull_probes.rs  compute_cull.rs  frame_timing.rs  geometry.rs  main.rs  material.rs  nav.rs  netcode.rs  portal_vis.rs  prl.rs  prl_loader.rs  shadow_cull.rs  texture.rs  ui_texture.rs  view_feel.rs  visibility.rs
crates/postretro/src/agent/: mod.rs
crates/postretro/src/agent_steering/: tests.rs
crates/postretro/src/audio/: assets.rs  buses.rs  mod.rs  voices.rs
crates/scripting-core/: Cargo.toml  build.rs
crates/scripting-core/src/: conv.rs  game_state_refs.rs  lib.rs  luau.rs  luau_prelude.rs  luau_require.rs  luau_virtual_modules.rs  primitive_adapters.rs  primitives_registry.rs  quickjs.rs  reaction_dispatch.rs  reaction_registry.rs  refresh_plan.rs  sequence.rs  staged_manifest.rs  state_crossings.rs  store_bridge.rs  watcher.rs
crates/visibility/: Cargo.toml
crates/visibility/src/: lib.rs  portal_vis.rs  visibility.rs
postretro/: Cargo.toml
postretro-level-compiler/: Cargo.toml
postretro-level-compiler/src/: animated_light_chunks.rs  animated_light_weight_maps.rs  bvh_build.rs  chart_raster.rs  chunk_grouping.rs  chunk_light_list_bake.rs  csg.rs  geometry.rs  geometry_utils.rs  lightmap_bake.rs  main.rs  map_data.rs  map_format.rs  pack.rs  parse.rs  partition.rs  portals.rs  sdf_bake.rs  sh_bake.rs  spatial_grid.rs  spatial_grid_test_fixtures.rs  test_fixtures.rs  texture_validation.rs  visibility.rs  visibility_test_fixtures.rs  voxel_grid.rs
postretro-level-compiler/src/format/: quake_map.rs
postretro-level-compiler/src/partition/: brush_bsp.rs  bsp.rs  cluster.rs  face_extract.rs  types.rs
postretro-level-compiler/src/visibility/: mod.rs  portal_vis.rs  pvs.rs
postretro-level-compiler/tests/: animated_weight_maps_fixtures.rs
postretro-script-compiler/: Cargo.toml
postretro-script-compiler/src/: main.rs
postretro/proptest-regressions/lighting/: shadow.txt
postretro/src/: bsp.rs  camera.rs  compute_cull.rs  frame_timing.rs  geometry.rs  lighting.rs  main.rs  material.rs  portal_vis.rs  prl.rs  render.rs  texture.rs  visibility.rs
postretro/src/fx/: mod.rs  smoke.rs
postretro/src/input/: bindings.rs  cursor.rs  defaults.rs  diagnostics.rs  gamepad.rs  look.rs  mod.rs  types.rs
postretro/src/lighting/: chunk_list.rs  influence.rs  lightmap.rs  mod.rs  shadow.rs  spec_buffer.rs  spot_shadow.rs
postretro/src/render/: animated_lightmap.rs  curve_eval_test.rs  fog_pass.rs  frame_timing.rs  mod.rs  sdf.rs  sh_compose.rs  sh_volume.rs  shadow_pass.rs  smoke.rs
postretro/src/scripting/: call_context.rs  conv.rs  ctx.rs  error.rs  event_dispatch.rs  luau.rs  mod.rs  pool.rs  primitives.rs  primitives_light.rs  primitives_registry.rs  quickjs.rs  registry.rs  runtime.rs  typedef.rs  watcher.rs
postretro/src/shaders/: animated_lightmap_compose.wgsl  billboard.wgsl  bvh_cull.wgsl  curve_eval.wgsl  depth_prepass.wgsl  fog_volume.wgsl  forward.wgsl  sh_compose.wgsl  shadow_depth.wgsl  shadow_depth_point.wgsl  spot_shadow.wgsl  wireframe.wgsl
(+1405 files in other folders)
