[workspace]
members = [
    "crates/postretro",
    "crates/level-format",
    "crates/level-compiler",
    "crates/script-compiler",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
# Windowing and GPU
winit = "0.30"
wgpu = "29"
pollster = "0.4"

# Shaped, anti-aliased text rendering on wgpu (cosmic-text + its own atlas and
# pipeline). Pinned to 0.11: that release depends on `wgpu ^29.0.0` (confirmed
# via crates.io dependency metadata), matching the workspace `wgpu = "29"`. The
# preceding line (0.10) targets `wgpu ^28`, so 0.11 is the compatible release.
# glyphon ships its own pipeline/atlas ŌĆö it is NOT routed through the UI quad
# pipeline. See context/plans/in-progress/M13--ui-render-pass-slice.
glyphon = "0.11"

# Math
glam = { version = "0.32", features = ["serde"] }

# Flexbox/grid layout solver for the UI descriptor tree. Pure CPU ŌĆö no wgpu
# dependency, so the wgpu version-pinning rationale (see `glyphon` above) does
# not apply. Drives device-pixel layout of the retained UI widget tree.
taffy = "0.10"

# Collision (world-space trimesh queries; nalgebra types stay inside the
# `collision` module). See context/lib/entity_model.md ┬¦7.
parry3d = "0.17"

# GPU struct casting (#[repr(C)] ŌåÆ bytes, no `unsafe` at call sites)
bytemuck = { version = "1", features = ["derive"] }

# Map parsing (level compiler)
shambler = "0.2"

# Audio. `default-features = false` drops the decoders the engine never uses
# (mp3/flac and the rest of kira's default set) from the release binary; we
# enable only what the asset loader needs: the cpal backend (`DefaultBackend`)
# plus ogg+wav decoding. The split is container vs codec ŌĆö `ogg` is the Ogg
# container and `vorbis` its codec; `wav` is the RIFF/WAV container and `pcm` the
# (uncompressed) codec the WAV fixtures store their samples in. Dropping any of
# these makes a corresponding asset fail to decode. kira 0.12 has no `mock`
# feature ŌĆö its mock backend is always compiled ŌĆö so test-only usage is kept out
# of non-test code via `#[cfg(test)]` rather than a feature flag.
kira = { version = "0.12", default-features = false, features = [
    "cpal",
    "ogg",
    "vorbis",
    "wav",
    "pcm",
] }

# Gamepad input
gilrs = "0.11"

# Error handling
thiserror = "2"
anyhow = "1"

# Typed bit flags (e.g. .prm slot mask)
bitflags = "2"

# Parallelism
rayon = "1"

# Image loading
image = { version = "0.25", default-features = false, features = ["png"] }
# glTF parsing (CPU-side skinned-model loader in `postretro::model`). Default
# features: `import` (resolves the external `scene.bin` + URIs and decodes any
# images), `utils` (typed accessor readers for positions/UVs/joints/weights),
# `names` (clip names). External PNG textures only this slice ŌĆö the loader
# resolves the material to a pre-baked `.prm` key and ignores the decoded
# images. `image` (pulled by `import`) is already a workspace dep.
gltf = "1.4"
# Lower-level PNG decoder ŌĆö used by prl-build to inspect color-space chunks
# (sRGB, gAMA, iCCP) that the `image` crate does not surface in its public API.
png = "0.18"

# Serialization (scripting FFI transit)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Scripting runtimes (embedded). Default features; `parallel` OFF ŌĆö scripting
# is single-threaded, `Runtime: Send` is not required. See
# context/plans/in-progress/scripting-foundation/plan-1-runtime-foundation.md ┬¦Sub-plan 2.
rquickjs = { version = "0.11", default-features = true }
# `luau` auto-enables vendored mode; do NOT list `vendored` redundantly.
mlua = { version = "0.11", features = ["luau", "serde"] }

# Filesystem watcher (dev-mode hot reload). See
# context/plans/in-progress/scripting-foundation/plan-1-runtime-foundation.md ┬¦Sub-plan 7.
notify = "8"
notify-debouncer-full = "0.7"

# Logging
log = "0.4"
env_logger = "0.11"

# Testing
proptest = "1"

# Workspace members
postretro-level-format = { path = "crates/level-format" }

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
