[package]
name = "postretro"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A retro-style FPS engine inspired by Doom/Quake"
license.workspace = true

[dependencies]
# Windowing and GPU
winit.workspace = true
wgpu.workspace = true
pollster.workspace = true

# Math
glam.workspace = true

# Audio
kira.workspace = true

# Gamepad input
gilrs.workspace = true

# Image loading
image.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Serialization (scripting FFI transit)
serde.workspace = true
serde_json.workspace = true

# Scripting runtimes (embedded)
rquickjs.workspace = true
mlua.workspace = true

# Filesystem watcher — dev-mode hot reload (sub-plan 7). The runtime activation
# of the watcher is gated on `cfg(debug_assertions)`; compiling the deps in
# release builds is cheap and lets the scripting module share one dependency
# set across profiles.
notify.workspace = true
notify-debouncer-full.workspace = true

# Logging
log.workspace = true
env_logger.workspace = true

# Workspace members
postretro-level-format.workspace = true

[dev-dependencies]
# Pinned to the same version wgpu 29 re-exports transitively so the WGSL
# struct-stride regression test parses against the exact WGSL dialect the
# runtime shader compiles with.
naga = { version = "29", features = ["wgsl-in"] }

# Property-based testing for shadow math invariants.
proptest = { workspace = true }

# Adding any explicit `[[bin]]` entry disables Cargo's implicit detection of
# `src/main.rs`, so the engine binary must also be declared explicitly — see
# context/plans/in-progress/scripting-foundation/plan-1-runtime-foundation.md
# §Sub-plan 5 "Implementation note — Cargo auto-detection".
[[bin]]
name = "postretro"
path = "src/main.rs"

[[bin]]
name = "gen-script-types"
path = "src/bin/gen_script_types.rs"
