[package]
name = "postretro-entities"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "VM-free entity registry and data substrate for Postretro"
license.workspace = true

[features]
script-ffi = ["dep:rquickjs", "dep:mlua", "postretro-foundation/script-ffi"]

[dependencies]
glam.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
postretro-foundation = { path = "../foundation", default-features = false }
rquickjs = { workspace = true, optional = true }
mlua = { workspace = true, optional = true }
