[package]
name = "postretro-level-compiler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Level compiler for Postretro"
license.workspace = true

[[bin]]
name = "prl-build"
path = "src/main.rs"

[dependencies]
postretro-level-format = { workspace = true, features = ["serde", "gltf-resolve"] }
shambler.workspace = true
glam.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
thiserror.workspace = true
rayon.workspace = true
indicatif = "0.17"
bvh = { version = "0.11", default-features = false }
nalgebra = { version = "0.33", default-features = false, features = ["std"] }
png.workspace = true
image.workspace = true
blake3 = "1"
bytemuck = { workspace = true }
postcard = { version = "1", features = ["alloc"] }
serde.workspace = true

[dev-dependencies]
proptest = { workspace = true }
