[package]
name = "postretro-level-loader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "CPU-only runtime PRL loader and level data for Postretro"
license.workspace = true

[dependencies]
glam.workspace = true
log.workspace = true
postretro-level-format = { workspace = true, optional = true }
postretro-render-data = { workspace = true, optional = true }
thiserror.workspace = true

[features]
default = ["load-prl"]
dev-tools = []
load-prl = ["dep:postretro-level-format", "dep:postretro-render-data"]
