[package]
name = "postretro-lighting"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "CPU-only lighting packing and reachability math for Postretro"
license.workspace = true

[features]
default = []
script-ffi = [
    "dep:postretro-scripting-core",
    "dep:serde_json",
    "dep:rquickjs",
    "dep:mlua",
    "postretro-entities/script-ffi",
    "postretro-foundation/script-ffi",
]

[dependencies]
glam.workspace = true
postretro-level-loader = { path = "../level-loader", default-features = false }
postretro-render-data.workspace = true
postretro-foundation = { path = "../foundation", default-features = false, optional = true }
postretro-entities = { path = "../entities", default-features = false, optional = true }
postretro-scripting-core = { path = "../scripting-core", default-features = false, optional = true }
serde_json = { workspace = true, optional = true }
rquickjs = { workspace = true, optional = true }
mlua = { workspace = true, optional = true }
