[package]
name = "postretro-model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
postretro-render-data = { workspace = true }
postretro-level-format = { workspace = true, features = ["gltf-resolve"] }

glam.workspace = true
gltf.workspace = true
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
thiserror.workspace = true
bytemuck.workspace = true
log.workspace = true
