[package]
name = "postretro"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A retro-style FPS engine inspired by Doom/Quake"
license.workspace = true
default-run = "postretro"

[dependencies]
# Windowing and GPU
winit.workspace = true
wgpu.workspace = true
pollster.workspace = true

# Shaped, anti-aliased text — the engine default UI text path. glyphon owns its
# own pipeline/atlas; the UI pass records its text draw into the shared UI render
# pass. Version pinned at the workspace root (wgpu-29-compatible 0.11).
glyphon.workspace = true

# Math
glam.workspace = true
bytemuck.workspace = true

# Flexbox layout solver for the retained UI widget tree (M13 Goal B). Consumed
# by the UI layout path; pure CPU, no GPU coupling.
taffy.workspace = true

# Collision (parry3d trimesh + ray queries). nalgebra types are confined to
# the `collision` module per the entity_model.md §7 invariant.
parry3d = { workspace = true }

# Audio
kira.workspace = true

# Gamepad input
gilrs.workspace = true

# Image loading
image.workspace = true

# glTF model loading (CPU-side `model` module).
gltf.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Serialization (scripting FFI transit)
serde.workspace = true
serde_json.workspace = true

# Scripting runtimes (embedded)
rquickjs.workspace = true
mlua.workspace = true

# Filesystem watcher — dev-mode hot reload (sub-plan 7). The runtime activation
# of the watcher is gated on `cfg(debug_assertions)`; compiling the deps in
# release builds is cheap and lets the scripting module share one dependency
# set across profiles.
notify.workspace = true
notify-debouncer-full.workspace = true

# Logging
log.workspace = true
env_logger.workspace = true

# Workspace members
postretro-level-format.workspace = true

# Debug UI (egui) — only compiled in when the `dev-tools` feature is enabled.
# Pinned to 0.34: that release line requires `wgpu ^29` and `winit ^0.30`,
# which matches the workspace's `wgpu = "29"` / `winit = "0.30"`. See
# `context/plans/in-progress/egui-debug-ui-foundation/research.md` for the
# compatibility matrix.
egui = { version = "0.34", optional = true }
egui-winit = { version = "0.34", optional = true }
egui-wgpu = { version = "0.34", optional = true, features = ["winit"] }

[features]
# Pulls in the egui-based debug panel and its diagnostic chord. Without this
# feature, none of the egui crates are linked.
dev-tools = ["dep:egui", "dep:egui-winit", "dep:egui-wgpu"]

[build-dependencies]
postretro-script-compiler = { path = "../script-compiler" }

[dev-dependencies]
# No kira dev-dependency is needed to reach its mock backend: kira 0.12 compiles
# `kira::backend::mock` unconditionally (it is NOT behind a feature flag), so
# `MockBackend` is always available to tests regardless of the trimmed feature
# set declared in the workspace manifest. All `kira::backend::mock` references in
# the audio module are confined to `#[cfg(test)]`, so the non-test crate never
# names mock even though it ships in the kira dependency.

# Pinned to the same version wgpu 29 re-exports transitively so the WGSL
# struct-stride regression test parses against the exact WGSL dialect the
# runtime shader compiles with.
naga = { version = "29", features = ["wgsl-in"] }

# Property-based testing for shadow math invariants.
proptest = { workspace = true }

# Reference Catmull-Rom evaluator for WGSL parity tests
# (see src/render/curve_eval_test.rs).
splines = "4"

# Any explicit `[[bin]]` entry disables Cargo's implicit `src/main.rs`
# detection, so the engine binary must also be declared explicitly.
[[bin]]
name = "postretro"
path = "src/main.rs"

[[bin]]
name = "gen-script-types"
path = "src/bin/gen_script_types.rs"
